k8s/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: rwx-tests
  labels:
    app: rwx-tests
spec:
  ports:
    - port: 80
  selector:
    app: rwx-tests
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rwx-tests
  labels:
    app: rwx-tests
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rwx-tests
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rwx-tests
    spec:
      containers:
        - image: ubuntu:xenial
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "-c" ]
          args:
            - sleep 10; touch /data/index.html; while true; do echo $(hostname):$(date) >> /data/index.html; sleep 1; done;
          name: rwx-tests
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /data
              name: rwx-tests
        - image: nginx:stable
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: rwx-tests
      restartPolicy: Always
      volumes:
        - name: rwx-tests
          persistentVolumeClaim:
            claimName: rwx-tests
